Fixed the vertical alignment of whole page

--- a/askie/css/style.css
+++ b/askie/css/style.css
@@ -240,7 +240,7 @@ footer .contect {
 }
 
 .contect > div {
-    padding: 1.5rem 1rem;
+    padding: 1.5rem;
     border: 1px solid #cbdbbe;
 }
 
